# compiler

./: Cargo.toml  README.md  main.zig
.github/: dependabot.yml
.github/workflows/: rust-ci.yml
compiler/: Cargo.toml  compiler.rs  compiler_function_test.rs  compiler_test.rs  frame.rs  lib.rs  main.rs  op_code.rs  op_code_test.rs  symbol_table.rs  symbol_table_test.rs  vm.rs  vm_function_test.rs  vm_test.rs
interpreter/: Cargo.toml  interpreter_test.rs  lib.rs  main.rs
lexer/: Cargo.toml  cargo.toml  lexer_test.rs  lib.rs  main.rs  token.rs
lexer/snapshots/: lexer__lexer_test__tests__array.snap.new  lexer__lexer_test__tests__bool.snap.new  lexer__lexer_test__tests__comments.snap.new  lexer__lexer_test__tests__comparison_operators.snap  (+9 more)
object/: Cargo.toml  builtins.rs  cargo.toml  environment.rs  object.rs
parer/: ast.rs  ast_test.rs
parser/: Cargo.toml  ast.rs  lib.rs  main.rs  parser_test.rs  precedences.rs
parser/snapshots/: parser__ast_test__tests__test_array.snap  parser__ast_test__tests__test_binary.snap  parser__ast_test__tests__test_binary_nested.snap  parser__ast_test__tests__test_func_call.snap  parser__ast_test__tests__test_func_declaration.snap  parser__ast_test__tests__test_func_with_name.snap  parser__ast_test__tests__test_hash.snap  parser__ast_test__tests__test_if.snap  parser__ast_test__tests__test_index.snap  parser__ast_test__tests__test_let.snap  parser__ast_test__tests__test_return.snap  parser__ast_test__tests__test_string.snap  parser__ast_test__tests__test_unary.snap
src/: ast.rs  cargo.toml  code.rs  code_test.rs  compiler.rs  compiler_test.rs  lexer.rs  main.rs  object.rs  parser.rs  repl.rs  token.rs  vm.rs
(+1 files in other folders)
