[package]
name = "monkey-parser"
description = "a parser for monkey lang"
edition = '2021'

[lib]
name = "parser"
path= "lib.rs"

[[bin]]
name = "monkey-parser"
path = "main.rs"

[dependencies]
monkey-lexer = { path = "../lexer" }
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"

[dev-dependencies]
insta = "1.42.0"
