[package]
name = "monkey-parser"
description = "a parser for monkey lang"
edition = '2024'

[lib]
name = "parser"
path= "lib.rs"

[[bin]]
name = "monkey-parser"
path = "main.rs"

[dependencies]
monkey-lexer = { path = "../lexer" }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"

[dev-dependencies]
insta = "1.46.3"
